manifests/dev/demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ownid-demo-app-deployment
  namespace: dev
  labels:
    app: ownid-demo-app
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ownid-demo-app
  template:
    metadata:
      labels:
        app: ownid-demo-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ownid-demo-app
          image: ownid.common.repositories.cloud.sap/demo-app:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ownid-demo-app-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: ownid-demo-app
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 80
      name: https
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ownid-demo-app-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:571861302935:certificate/c484a4ec-4e6a-408d-b0eb-3c8f1fc1ab68
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: ownid-demo-app
spec:
  rules:
   - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: ownid-demo-app-service
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ownid-demo-app-2-deployment
  namespace: dev
  labels:
    app: ownid-demo-app-2
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ownid-demo-app-2
  template:
    metadata:
      labels:
        app: ownid-demo-app-2
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ownid-demo-app-2
          image: ownid.common.repositories.cloud.sap/demo-app:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ownid-demo-app-2-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: ownid-demo-app-2
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 80
      name: https
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ownid-demo-app-2-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:571861302935:certificate/b13a009b-d2f9-4708-a379-c31047621cf3
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: ownid-demo-app-2
spec:
  rules:
   - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: ownid-demo-app-2-service
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ownid-demo-app-3-deployment
  namespace: dev
  labels:
    app: ownid-demo-app-3
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ownid-demo-app-3
  template:
    metadata:
      labels:
        app: ownid-demo-app-3
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ownid-demo-app-3
          image: ownid.common.repositories.cloud.sap/demo-app:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ownid-demo-app-3-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: ownid-demo-app-3
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 80
      name: https
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ownid-demo-app-3-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:571861302935:certificate/c484a4ec-4e6a-408d-b0eb-3c8f1fc1ab68
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: ownid-demo-app-3
spec:
  rules:
   - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: ownid-demo-app-3-service
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ownid-demo-app-4-deployment
  namespace: dev
  labels:
    app: ownid-demo-app-4
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ownid-demo-app-4
  template:
    metadata:
      labels:
        app: ownid-demo-app-4
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ownid-demo-app-4
          image: ownid.common.repositories.cloud.sap/demo-app:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ownid-demo-app-4-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: ownid-demo-app-4
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 80
      name: https
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ownid-demo-app-4-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:571861302935:certificate/c484a4ec-4e6a-408d-b0eb-3c8f1fc1ab68
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: ownid-demo-app-4
spec:
  rules:
   - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: ownid-demo-app-4-service
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ownid-demo-screens-app-deployment
  namespace: dev
  labels:
    app: ownid-demo-screens-app
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ownid-demo-screens-app
  template:
    metadata:
      labels:
        app: ownid-demo-screens-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ownid-demo-screens-app
          image: ownid.common.repositories.cloud.sap/demo-app:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ownid-demo-screens-app-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: ownid-demo-screens-app
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 80
      name: https
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ownid-demo-screens-app-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:571861302935:certificate/c484a4ec-4e6a-408d-b0eb-3c8f1fc1ab68
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: ownid-demo-screens-app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: ownid-demo-screens-app-service
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ownid-multi1-screens-app-deployment
  namespace: dev
  labels:
    app: ownid-multi1-screens-app
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ownid-multi1-screens-app
  template:
    metadata:
      labels:
        app: ownid-multi1-screens-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ownid-multi1-screens-app
          image: ownid.common.repositories.cloud.sap/demo-app:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ownid-multi1-screens-app-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: ownid-multi1-screens-app
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 80
      name: https
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ownid-multi1-screens-app-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:571861302935:certificate/c484a4ec-4e6a-408d-b0eb-3c8f1fc1ab68
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: ownid-multi1-screens-app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: ownid-multi1-screens-app-service
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ownid-multi2-screens-app-deployment
  namespace: dev
  labels:
    app: ownid-multi2-screens-app
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ownid-multi2-screens-app
  template:
    metadata:
      labels:
        app: ownid-multi2-screens-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: ownid-multi2-screens-app
          image: ownid.common.repositories.cloud.sap/demo-app:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ownid-multi2-screens-app-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: ownid-multi2-screens-app
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 80
      name: https
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ownid-multi2-screens-app-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:571861302935:certificate/c484a4ec-4e6a-408d-b0eb-3c8f1fc1ab68
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: ownid-multi2-screens-app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: ownid-multi2-screens-app-service
              servicePort: 80
